--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,10 @@ table {
     background-color: #000000;
 }
 
+.dropdown-text li a {
+  font-size: 20px;
+}
+
 /* Carousel slider */
 
 .carousel .item {
