--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,11 @@ table {
 
 }
 
+.listNames {
+  font-family: 'bebas_neueregular';
+  font-size: 24px;
+}
+
 /* Navbar */
 
 #barLogo {
@@ -122,7 +127,7 @@ table {
 }
 
 .imageLg img {
-  width: 98%;
+  width: 100%;
 }
 
 .imageSm img {
@@ -150,7 +155,7 @@ table {
 
 .imageSm h2 {
   position: absolute;
-  top: 70px;
+  top: 100px;
   left: 0;
   width: 100%;
   color: #fff;
@@ -160,11 +165,25 @@ table {
   float: left;
   clear: left;
   color: white;
-  font: bold 15px/25px Helvetica, Arial, Sans-Serif;
+  font:  14px/25px Helvetica, Arial, Sans-Serif;
   letter-spacing: -1px;
   background: rgb(0, 0, 0); /* fallback color */
   background: rgba(0, 0, 0, 0.5);
   padding: 3px 10px;
+}
+
+.imageSm span:first-of-type {
+  color: #27ae60;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.imageSmlst h2 {
+  position: absolute;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  color: #fff;
 }
 
 /* Tables for smaller episode thumbnails */
@@ -174,7 +193,7 @@ table {
 }
 
 .epiTable tr {
-    line-height: 30px;
+    line-height: 60px;
 }
 
 .epiTable td {
@@ -182,12 +201,30 @@ table {
 }
 
 .epiTable img {
-  width: 96%;
+  width: 90%;
   vertical-align: center;
 }
 
 #featured {
-  margin-bottom: 8px;
+  margin-bottom: 22px;
+}
+
+/* Photo Galleries */
+
+.gallery {
+  margin-bottom: 200px;
+}
+
+.gallery tr {
+  line-height: 60px;
+}
+
+.gallery td {
+  width: 100px;
+}
+
+.gallery img {
+  width: 90%;
 }
 
 /* Adds fade effect to Bootstrap Carousel */
