--- a/css/main.css
+++ b/css/main.css
@@ -165,7 +165,7 @@ table {
 
 .imageSm .play {
   display: none;
-  background: url('play-arrow2.png') center center no-repeat;
+  background: url('../img/play-arrow2.png') center center no-repeat;
   height: 200px; 
   width: 100%;
   margin-top: -210px;
